2010-05-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Policies.xml: Added attribute to explicitly allow
	  differential serialization for a policy (which is disabled
	  by default).

2010-04-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl/BaseView.cs:
	* MonoDevelop.VersionControl.Views/StatusView.cs: Use icon.

2010-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/ChangeSet.cs:
	* MonoDevelop.VersionControl.Views/StatusView.cs: After
	  updating status, remove from the changeset the files/folders
	  which have been deleted. Fixes bug #582514 - VCS status view
	  sometimes has hidden invalid items that obstruct commit.

2010-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: Don't show
	  an output pad when updating the status view.

	* MonoDevelop.VersionControl/Task.cs:
	* MonoDevelop.VersionControl/LockCommand.cs:
	* MonoDevelop.VersionControl/UnlockCommand.cs:
	* MonoDevelop.VersionControl/UpdateCommand.cs:
	* MonoDevelop.VersionControl/CommitCommand.cs:
	* MonoDevelop.VersionControl/RevertCommand.cs:
	* MonoDevelop.VersionControl/PublishCommand.cs:
	* MonoDevelop.VersionControl/CheckoutCommand.cs:
	* MonoDevelop.VersionControl/AddRemoveMoveCommand.cs:
	* MonoDevelop.VersionControl/RevertRevisionsCommands.cs:
	  Improve success message. Small api simplification.

2010-03-23  Lluis Sanchez Gual  <lluis@novell.com>

	* VersionControl.addin.xml: Register data files.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* VersionControl.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* VersionControl.addin.xml:
	* MonoDevelop.VersionControl.csproj:
	* MonoDevelop.VersionControl/Task.cs:
	* MonoDevelop.VersionControl/BaseView.cs:
	* MonoDevelop.VersionControl/UpdateCommand.cs:
	* MonoDevelop.VersionControl/CommitCommand.cs: